--- a/obs-plugin-management/forms/plugincenter.ui
+++ b/obs-plugin-management/forms/plugincenter.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1219</width>
-    <height>768</height>
+    <width>1092</width>
+    <height>706</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1000</width>
+    <height>700</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -61,7 +73,7 @@
         <widget class="QTreeView" name="treeView">
          <property name="maximumSize">
           <size>
-           <width>300</width>
+           <width>250</width>
            <height>16777215</height>
           </size>
          </property>
@@ -71,7 +83,7 @@
         <widget class="QListView" name="listView">
          <property name="maximumSize">
           <size>
-           <width>650</width>
+           <width>550</width>
            <height>16777215</height>
           </size>
          </property>
